--- a/TextileResearchDevelopment/Web.config
+++ b/TextileResearchDevelopment/Web.config
@@ -5,8 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="MyConnectionString" connectionString="data source=(local);database=TextileResearchDevelopment;User Id=sa;Password=123;Integrated Security=false;MultipleActiveResultSets=True;"
-      providerName="System.Data.SqlClient" />
+    <add name="MyConnectionString" connectionString="data source=(local);database=TextileResearchDevelopment;User Id=sa;Password=123;Integrated Security=false;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -17,7 +16,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
-    <globalization uiCulture="en" culture="en-GB"/>
+    <globalization uiCulture="en" culture="en-GB" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
