--- a/TextileResearchDevelopment/TextileResearchDevelopment.csproj
+++ b/TextileResearchDevelopment/TextileResearchDevelopment.csproj
@@ -129,6 +129,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\DbClass.cs" />
     <Compile Include="Models\Fabric.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
