--- a/TextileResearchDevelopment/bin/TextileResearchDevelopment.dll.config
+++ b/TextileResearchDevelopment/bin/TextileResearchDevelopment.dll.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="MyConnectionString" connectionString="data source=(local);database=TextileResearchDevelopment;User Id=sa;Password=123;Integrated Security=false;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="MyConnectionString" connectionString="data source=(local);database=TextileResearchDevelopment;User Id=sa;Password=123;Integrated Security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
