fabric problem solved12

--- a/TextileResearchDevelopment/TextileResearchDevelopment.csproj
+++ b/TextileResearchDevelopment/TextileResearchDevelopment.csproj
@@ -123,8 +123,15 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="BLL\FabricBLL.cs" />
+    <Compile Include="Controllers\AopPrintController.cs" />
+    <Compile Include="Controllers\DyeingController.cs" />
     <Compile Include="Controllers\FabricController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\KnittingController.cs" />
+    <Compile Include="Controllers\RemarksController.cs" />
+    <Compile Include="Controllers\SlittingController.cs" />
+    <Compile Include="Controllers\StenterController.cs" />
+    <Compile Include="Controllers\TestReportController.cs" />
     <Compile Include="DataAccessLayer\DBGateway.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -201,7 +208,6 @@
     <Content Include="Scripts\jquery-3.3.1.slim.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery.dataTables.min.js" />
-    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
@@ -242,6 +248,13 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Fabric\Index.cshtml" />
+    <Content Include="Views\Knitting\Index.cshtml" />
+    <Content Include="Views\Dyeing\Index.cshtml" />
+    <Content Include="Views\Slitting\Index.cshtml" />
+    <Content Include="Views\Stenter\Index.cshtml" />
+    <Content Include="Views\AopPrint\Index.cshtml" />
+    <Content Include="Views\TestReport\Index.cshtml" />
+    <Content Include="Views\Remarks\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
