--- a/TextileResearchDevelopment/TextileResearchDevelopment.csproj
+++ b/TextileResearchDevelopment/TextileResearchDevelopment.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Controllers\SlittingController.cs" />
     <Compile Include="Controllers\StenterController.cs" />
     <Compile Include="Controllers\TestReportController.cs" />
+    <Compile Include="Controllers\UserManagementController.cs" />
     <Compile Include="DataAccessLayer\DBGateway.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -281,6 +282,7 @@
     <Content Include="Views\Remarks\Index.cshtml" />
     <Content Include="Views\Account\Index.cshtml" />
     <Content Include="Views\Home\LoginForm.cshtml" />
+    <Content Include="Views\UserManagement\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
