--- a/TextileResearchDevelopment/TextileResearchDevelopment.csproj
+++ b/TextileResearchDevelopment/TextileResearchDevelopment.csproj
@@ -137,8 +137,11 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="BLL\BrushBLL.cs" />
+    <Compile Include="BLL\CompactingBLL.cs" />
     <Compile Include="BLL\DryerBLL.cs" />
     <Compile Include="BLL\HSPBLL.cs" />
+    <Compile Include="BLL\PeachBLL.cs" />
     <Compile Include="BLL\SingeingBLL.cs" />
     <Compile Include="BLL\StenterBLL.cs" />
     <Compile Include="BLL\WashingBLL.cs" />
@@ -159,11 +162,11 @@
     <Compile Include="Controllers\HSPController.cs" />
     <Compile Include="Controllers\KnittingController.cs" />
     <Compile Include="Controllers\PeachController.cs" />
+    <Compile Include="Controllers\PrintController.cs" />
     <Compile Include="Controllers\QCController.cs" />
     <Compile Include="Controllers\RemarksController.cs" />
     <Compile Include="Controllers\ReportController.cs" />
     <Compile Include="Controllers\SingeingController.cs" />
-    <Compile Include="Controllers\SlittingController.cs" />
     <Compile Include="Controllers\StenterController.cs" />
     <Compile Include="Controllers\UserManagementController.cs" />
     <Compile Include="Models\Brush.cs" />
