--- a/TextileResearchDevelopment/Web.config
+++ b/TextileResearchDevelopment/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="MyConnectionString" connectionString="data source=192.168.31.251;database=TextileResearchDevelopment;User Id=sa;Password=x123@slts;Integrated Security=False;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="MyConnectionString" connectionString="data source=(local);database=TextileResearchDevelopment;User Id=sa;Password=123;Integrated Security=False;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <!--<add name="MyConnectionString" connectionString="data source=192.168.31.251;database=TextileResearchDevelopment;User Id=sa;Password=x123@slts;Integrated Security=False;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />-->
     <add name="TextileResearchDevelopmentEntities" connectionString="metadata=res://*/Models.ReportModel.csdl|res://*/Models.ReportModel.ssdl|res://*/Models.ReportModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=TextileResearchDevelopment;integrated security=True;user id=sa;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
