--- a/TextileResearchDevelopment/Web.config
+++ b/TextileResearchDevelopment/Web.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <!--<add name="MyConnectionString" connectionString="data source=(local);database=TextileResearchDevelopment;User Id=sa;Password=123;Integrated Security=False;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />-->
     <add name="MyConnectionString" connectionString="data source=192.168.31.251;database=TextileResearchDevelopment;User Id=sa;Password=x123@slts;Integrated Security=False;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
-    <add name="TextileResearchDevelopmentEntities" connectionString="metadata=res://*/Models.ReportModel.csdl|res://*/Models.ReportModel.ssdl|res://*/Models.ReportModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=TextileResearchDevelopment;integrated security=True;user id=sa;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TextileResearchDevelopmentEntities" connectionString="metadata=res://*/Models.MasterReport.csdl|res://*/Models.MasterReport.ssdl|res://*/Models.MasterReport.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.31.251;initial catalog=TextileResearchDevelopment;integrated security=False;user id=sa;password=x123@slts;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
